2006-05-03  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/include/tie-formatting-problem.hh (class
	Tie_formatting_problem): index Chord_outline_map by Tuple2 for
	[column, direction]. This fixes laissez vibrer ties.
 
	* flower/include/tuple.hh (struct Tuple2): new file.

	* mf/GNUmakefile (FC_FIND): new function. Find ncsb using
	$(FCMATCH), only if $(NCSB_DIR) not set.

	* configure.in (LINK_GXX_STATICALLY): only warn if $NCSB_DIR set.

	* config.make.in (DOCUMENTATION): set FCMATCH

	* autogen.sh (srcdir): don't set --with-ncsb-dir.

2006-05-03  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ various: final round of reorg.

	* Documentation/user/instrument-notation.itely: some more
	fixes from Eduardo, thanks!

2006-05-02  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PACKAGE_NAME): release 2.9.3

	* flower/file-path.cc (is_dir): canonicalize file name before stat'ing.

	* lily/relocate.cc (framework_relocation): remove old relocation stuff.

2006-05-01  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/define-grob-properties.scm (all-user-grob-properties):
	Correct typo, thanks to Eduardo.

2006-05-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/GNUmakefile (SEXECUTABLES): remove lilypond-ps2png.scm

	* buildscripts/lilypond-words.py (F): indent fix.

	* input/regression/tie-arpeggio-collision.ly: new file.

	* lily/tie-formatting-problem.cc (set_column_chord_outline): new
	function: store outlines per column rank.

	* lily/include/tie-configuration.hh (class Tie_configuration): add
	column_ranks_ to specification and configuration, to distinguish
	between ties for different heads in arpegiated chords.

	* lily/relocate.cc (framework_relocation): use INSTALLER_PREFIX.

	* *.py: more 4 space indents.

	* autogen.sh (conf_flags): set sensible default for with-ncsb-dir

2006-05-01  Joe Neeman  <joeneeman@gmail.com>

	* scm/lily-library.scm: Fix guile 1.6 compatibility in inf? and nan?
