@@ -1,0 +1,14 @@
+<html>
+<p>
+Documents for lilypond-book may freely mix music and text.  For
+example,
+<lilypond>
+\relative {
+  c2^"test" g'2 \times 2/3 { f8 e d } c'2 g4
+}
+</lilypond>
+
+<lilypond fragment quote staffsize=26 verbatim>
+  c'4 f16
+</lilypond>
+</html>
